<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/home_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    
    <item
        android:id="@+id/action_sync"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/menu_sync"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_feedback"
        android:icon="@drawable/outline_feedback_24_white"
        android:title="@string/menu_feedback"
        app:showAsAction="ifRoom" />
</menu>