<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.arny.aipromptmaster.presentation.ui.home.PromptsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_promptViewFragment"
            app:destination="@id/promptViewFragment" />
        <action
            android:id="@+id/action_nav_home_to_addPromptFragment"
            app:destination="@id/addPromptFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_history"
        android:name="com.arny.aipromptmaster.presentation.ui.chathistory.ChatHistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_nav_history_to_nav_chat"
            app:destination="@id/nav_chat" />
        <action
            android:id="@+id/action_nav_history_to_nav_models"
            app:destination="@id/nav_models" />
    </fragment>
    <fragment
        android:id="@+id/nav_chat"
        android:name="com.arny.aipromptmaster.presentation.ui.chat.ChatFragment"
        android:label="@string/title_llm_interaction"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="chatid"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_chat_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_chat_to_nav_models"
            app:destination="@id/nav_models" />
        <action
            android:id="@+id/action_nav_chat_to_editPromptDialogFragment"
            app:destination="@id/editPromptDialogFragment" />
    </fragment>
    <fragment
        android:id="@+id/promptViewFragment"
        android:name="com.arny.aipromptmaster.presentation.ui.view.PromptViewFragment"
        android:label="@string/prompt_details"
        tools:layout="@layout/fragment_prompt_view">
        <argument
            android:name="promptId"
            app:argType="string" />
        <action
            android:id="@+id/action_promptViewFragment_to_addPromptFragment"
            app:destination="@id/addPromptFragment" />
    </fragment>
    <fragment
        android:id="@+id/addPromptFragment"
        android:name="com.arny.aipromptmaster.presentation.ui.addprompt.EditPromptFragment"
        android:label="@string/edit_prompt_title"
        tools:layout="@layout/fragment_edit_prompt">
        <argument
            android:name="promptId"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_models"
        android:name="com.arny.aipromptmaster.presentation.ui.modelsview.ModelsFragment"
        android:label="@string/choose_model" >
        <action
            android:id="@+id/action_modelsFragment_to_settingsFragment"
            app:destination="@id/nav_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.arny.aipromptmaster.presentation.ui.settings.SettingsFragment"
        android:label="@string/ai_settings" />
    <dialog
        android:id="@+id/editPromptDialogFragment"
        android:name="com.arny.aipromptmaster.presentation.ui.editprompt.EditSystemPromptDialogFragment"
        android:label="EditPromptDialogFragment" >
        <argument
            android:name="initialPrompt"
            app:argType="string"
            app:nullable="true" />
    </dialog>
</navigation>